Fix login required

--- a/bioimageio_chatbot/apps/assistants/index.html
+++ b/bioimageio_chatbot/apps/assistants/index.html
@@ -116,13 +116,13 @@
       app.addMenuItem({
         label: "🦒 BioImage.IO Analyst",
         async callback() {
-          await api.createWindow({src: `${origin}/${workspace}/apps/bioimageio-chatbot-client/chat?assistant=analyst`, w:25, h:20, config: {assistant_name: "Kowalski"}, name: "BioImageIO Analyst"})
+          await api.createWindow({src: `${origin}/${workspace}/apps/bioimageio-chatbot-client/chat?assistant=analyst`, w:25, h:20, config: {assistant_name: "Bridget"}, name: "BioImageIO Analyst"})
         },
       });
       app.addMenuItem({
         label: "🐒 BioImage.IO Trainer",
         async callback() {
-          await api.createWindow({src: `${origin}/${workspace}/apps/bioimageio-chatbot-client/chat?assistant=trainer`, w:25, h:20, config: {assistant_name: "King Julien"}, name: "BioImageIO Trainer"})
+          await api.createWindow({src: `${origin}/${workspace}/apps/bioimageio-chatbot-client/chat?assistant=trainer`, w:25, h:20, config: {assistant_name: "Nina"}, name: "BioImageIO Trainer"})
         },
       });
       app.addMenuItem({
