--- a/bioimageio_chatbot/static/index.html
+++ b/bioimageio_chatbot/static/index.html
@@ -372,7 +372,7 @@
             <i class="fas fa-comment"></i> Feedback
           </button>
           <button type="button" class="btn btn-outline-secondary mt-3" id="advanced-options-btn">
-            <i class="fas fa-ellipsis-h"></i> More Options
+            <i class="fas fa-ellipsis-h"></i> Options
           </button>
 
           <!-- Profile options initially collapsed -->
